--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
   "devDependencies": {
     "@types/js-cookie": "^3.0.2",
     "@types/node": "^18.11.9",
+    "@types/nprogress": "^0.2.0",
     "@vitejs/plugin-vue": "^3.2.0",
     "cross-env": "^7.0.3",
     "dotenv-cli": "^6.0.0",
+    "node-sass": "^7.0.3",
     "sass": "^1.56.1",
     "sass-loader": "^13.2.0",
     "typescript": "^4.6.4",
@@ -33,6 +35,7 @@
     "unplugin-vue-components": "^0.22.9",
     "vite": "^3.2.3",
     "vite-plugin-autogeneration-import-file": "^3.0.0",
+    "vite-plugin-vue-setup-extend": "^0.4.0",
     "vue-tsc": "^1.0.9"
   }
 }
