动态修改标题

--- a/.env.dev.serve
+++ b/.env.dev.serve
@@ -1,7 +1,8 @@
 ENV='development'
 # 开发环境配置
+VITE_APP_TITLE='东木后台管理系统'
 # base-api
-VITE_APP_BASE_URL='/api'
+VITE_APP_BASE_URL='/dev-api'
 VITE_APP_REQUEST_URL='http://localhost:8080'
 VITE_APP_IS_DEBUGGER=true
 
