--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "unplugin-vue-components": "^0.22.9",
     "vite": "^3.2.3",
     "vite-plugin-autogeneration-import-file": "^3.0.0",
+    "vite-plugin-html": "^3.2.0",
     "vite-plugin-vue-setup-extend": "^0.4.0",
     "vue-tsc": "^1.0.9"
   }
