--- a/package.json
+++ b/package.json
@@ -27,11 +27,15 @@
     "@types/nprogress": "^0.2.0",
     "@types/path-browserify": "^1.0.0",
     "@vitejs/plugin-vue": "^3.2.0",
+    "autoprefixer": "^10.4.13",
     "cross-env": "^7.0.3",
     "dotenv-cli": "^6.0.0",
     "fast-glob": "^3.2.12",
     "node-sass": "^7.0.3",
     "path-browserify": "^1.0.1",
+    "postcss": "^8.4.19",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-modules": "^6.0.0",
     "sass": "^1.56.1",
     "sass-loader": "^13.2.0",
     "typescript": "^4.6.4",
@@ -45,5 +49,13 @@
     "vite-plugin-svg-icons": "^2.0.1",
     "vite-plugin-vue-setup-extend": "^0.4.0",
     "vue-tsc": "^1.0.9"
-  }
+  },
+  "browserslist": [
+    "defaults",
+    "not ie <= 8",
+    "last 2 versions",
+    "> 1%",
+    "iOS >= 7",
+    "Android >= 4.0"
+  ]
 }
