--- a/.env.dev.serve
+++ b/.env.dev.serve
@@ -2,6 +2,7 @@ ENV='development'
 # 开发环境配置
 VITE_APP_TITLE='东木后台管理系统'
 # base-api
+VITE_APP_CONTEXT_PATH='/'
 VITE_APP_BASE_URL='/dev-api'
 VITE_APP_REQUEST_URL='http://localhost:8080'
 VITE_APP_IS_DEBUGGER=true
