--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "author": "Eastwood",
   "version": "0.1.0",
+  "web-types": "./web-types.json",
   "type": "module",
   "scripts": {
     "serve:dev": "cross-env NODE_ENV=development dotenv -e .env.dev.serve vite --mode development",
@@ -13,15 +14,18 @@
   "dependencies": {
     "axios": "^1.1.3",
     "element-plus": "^2.2.21",
+    "file-saver": "^2.0.5",
     "js-cookie": "^3.0.1",
     "lodash-es": "^4.17.21",
     "mitt": "^3.0.0",
+    "moment": "^2.29.4",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.23",
     "vue": "^3.2.41",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.5",
     "@types/js-cookie": "^3.0.2",
     "@types/node": "^18.11.9",
     "@types/nprogress": "^0.2.0",
